Added more text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div data-role="content" data-theme='a' >
                 <h1>Music App</h1>
                 <p style="text-align: center; font-style: italic;">
-                    This website will help a user list and organize their favorite songs.
+                    This website will help a user list and organize their favorite songs. Uses the 'Song' object which takes in user info in its parameters.
+                    It uses this stored data to create a list with some clickable li.
                 </p>
                 <!-- <img src="./images/passport.jpg" alt="Passport and camera on a map of the world" >  -->
             </div>
@@ -131,7 +132,7 @@
                 <!-- <button type="button" id="buttonListAllTrips">Update Trip Information</button>
                 <p id="listAll"></p> -->
                 <P>Display the song/info the user entered and more information related to it</P>
-                
+                <!--Section with <li> that is clickable-->
                 <!-- <button type="button" id="buttonTripFacts">Button</button>
                 <p id="tripFacts"></p> -->
             </div>
