Added ID to constructor, started functions for creating a list, pagebeforeshow code.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 <p id="listAll"></p> -->
                 <P>Display the song/info the user entered and more information related to it</P>
                 <!--Section with <li> that is clickable-->
+                <ul id="songList"></ul>
                 <!-- <button type="button" id="buttonTripFacts">Button</button>
                 <p id="tripFacts"></p> -->
             </div>
