Added clear button and ability to overwrite entry in array. ID, title and genre display on page 3

--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
                 <label for="genre">Genre: </label>
                 <input type="text" id="genre"><br>
 
-                <label for="raiting">Raiting 1-5: </label>
-                <input type="number" id="raiting"><br>
+                <label for="rating">Rating 1-5: </label>
+                <input type="number" id="rating"><br>
                 
                 <button type="button" id="buttonAdd">Submit</button>
                 <button type="button" id="buttonShow">Show Song Information</button>
+                <button type="button"  id="buttonClear">Clear Info</button>
                 
                 <textarea id="show" rows="5" cols="42"></textarea>
             </div>
