working on click function

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p id="oneAlbum"></p>
                     <p id="oneYear"></p>
                     <p id="oneGenre"></p>
-                    <p id="oneRaiting"></p>
+                    <p id="oneRating"></p>
                 </div>
             </div>
             
