fixed undefined issue

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                 <!--Section with <li> that is clickable-->
                 <div><ul id="ulSongList"></ul></div>
                 <input type="button" value="Sort By Rating" id="buttonSortRating" data-inline="true" />
+                <input type="button" value="Sort By Title" id="buttonSortTitle" data-inline="true" />
             </div>
             
             <!-- notes footer --> 
